--- a/Practise/pom.xml
+++ b/Practise/pom.xml
@@ -118,6 +118,11 @@
 			<version>3.8.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.0.3</version>
+		</dependency>
 
 
 
